--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <section class="posts">
+    <section class="posts" style="display: none;">
       <% page.posts.each(function (post) { %>
         <article class="post">
           <div class="post-title">
