--- a/source/css/header.styl
+++ b/source/css/header.styl
@@ -1,13 +1,14 @@
 .header {
-  margin-top: 2em
+  padding: 55px 2em 0;
   display: flex
   align-items: baseline
   justify-content: space-between
 
+
   .blog-title .logo {
-    color: #AAA;
-    font-size: 2em;
-    font-family: "Comic Sans MS",cursive,LiSu,sans-serif;
+    color: #333333;
+    font-size: 16px;
+    font-family: "PingFang-SC", sans-serif;
     text-decoration: none;
   }
 
@@ -16,16 +17,17 @@
     padding: 0;
 
     .menu-item {
+      font-size: 15px;
       display: inline-block;
       margin-right: 10px;
     }
 
     .menu-item-link {
-      color: #AAA;
+      color: #999999;
       text-decoration: none;
 
-      &:hover {
-        color: #368CCB;
+      &:hover, &.active {
+        color: #333333;
       }
     }
   }
