--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -1,11 +1,10 @@
 body {
-  background-color: #F2F2F2;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  margin: 0;
+  background-color: #fff;
 }
 
 .container {
-  max-width: 960px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
