update: add fontawesome

--- a/source/css/header.styl
+++ b/source/css/header.styl
@@ -7,7 +7,7 @@
 
   .blog-title .logo {
     color: #333333;
-    font-size: 16px;
+    font-size: 24px;
     font-family: "PingFang-SC", sans-serif;
     text-decoration: none;
   }
@@ -20,6 +20,7 @@
       font-size: 15px;
       display: inline-block;
       margin-right: 10px;
+      padding: 0 1em;
     }
 
     .menu-item-link {
