--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,33 +1,35 @@
 <html>
 
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
-    <title>
-      <%- page.title %>
-    </title>
-  </head>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
+  <title>
+    <%- page.title %>
+  </title>
+</head>
 
-  <body>
-    <section class="posts" style="display: none;">
-      <% page.posts.each(function (post) { %>
-        <article class="post">
-          <div class="post-title">
-            <a class="post-title-link" href="<%- url_for(post.path) %>">
-              <%= post.title %>
-            </a>
-          </div>
-          <div class="post-content">
-            <%- strip_html(post.excerpt) %>
-          </div>
-          <div class="post-meta">
-            <span class="post-time">
-              <%- date(post.date, "YYYY-MM-DD") %>
-            </span>
-          </div>
-        </article>
+<body>
+  <section class="posts">
+    <% page.posts.each(function (post) { %>
+      <article class="post">
+        <div class="post-title">
+          <a class="post-title-link" href="<%- url_for(post.path) %>">
+            <%// post.title %>
+              test Title
+          </a>
+        </div>
+        <div class="post-content">
+          <%// strip_html(post.excerpt) %>
+            test Content
+        </div>
+        <div class="post-meta">
+          <span class="post-time">
+            <%- date(post.date, "YYYY-MM-DD") %>
+          </span>
+        </div>
+      </article>
       <% }) %>
-    </section>
-  </body>
+  </section>
+</body>
 
 </html>
