--- a/source/css/post.styl
+++ b/source/css/post.styl
@@ -1,33 +1,54 @@
-// .post {
-//   margin: 1em auto;
-//   padding: 30px 50px;
-//   background-color: #fff;
-//   border: 1px solid #ddd;
-//   box-shadow: 0 0 2px #ddd;
-// }
-//
-// .posts  {
-//   .post:first-child {
-//     margin-top: 0;
-//   }
-//
-//   .post-title {
-//     font-size: 1.5em;
-//
-//     .post-title-link {
-//       color: #368CCB;
-//       text-decoration: none;
-//     }
-//   }
-//
-//   .post-content {
-//     a {
-//       color: #368CCB;
-//       text-decoration: none;
-//     }
-//   }
-//
-//   .post-meta {
-//     color: #BABABA;
-//   }
-// }
+.posts  {
+  display: flex;
+  flex-wrap: wrap;
+
+  .post {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 50px 95px;
+  }
+
+  .post:first-child {
+    margin-top: 0;
+  }
+
+  .post-title {
+    position: relative;
+    font-size: 22px;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+
+    .post-title-link {
+      color: #333;
+      text-decoration: none;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      height: 2px;
+      width: 50px;
+      background-color: #dfdfdf;
+    }
+  }
+
+  .post-content {
+    font-size: 15px;
+    color: #666;
+    margin-bottom: 20px;
+    a {
+      color: #333;
+      text-decoration: none;
+    }
+  }
+
+  .post-meta {
+    font-size: 15px;
+    color: #666;
+    display: flex;
+    justify-content: flex-end;
+  }
+}
