--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -1,3 +1,5 @@
+@import "_variables";
+
 * {
   padding: 0;
   margin: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-  background-color: #fff;
+  background-color: backColor;
 }
 
 .container {
@@ -13,17 +15,8 @@ body {
   margin: 0 auto;
 }
 
-font-icon-path = "fonts/fontawesome-webfont"
-
-@font-face
-  font-family: FontAwesome
-  font-style: normal
-  font-weight: normal
-  src: url(font-icon-path + ".eot?v=#" + font-icon-version)
-  src: url(font-icon-path + ".eot?#iefix&v=#" + font-icon-version) format("embedded-opentype"),
-       url(font-icon-path + ".woff?v=#" + font-icon-version) format("woff"),
-       url(font-icon-path + ".ttf?v=#" + font-icon-version) format("truetype"),
-       url(font-icon-path + ".svg#fontawesomeregular?v=#" + font-icon-version) format("svg")
-
 @import "header";
 @import "post";
+@import "paginator";
+@import "footer";
+@import "font-awesome";
