--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <%- partial('_partial/head') %>
+<%- partial('_partial/head') %>
+
   <body>
     <%- partial('_partial/header') %>
-    <main class="main">
-      <%- body %>
-    </main>
+      <main class="main">
+        <%- body %>
+      </main>
+      <%- partial('_partial/footer') %>
   </body>
+
 </html>
