--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -18,5 +18,7 @@ body {
 @import "header";
 @import "post";
 @import "paginator";
+@import "page";
+@import "comments";
 @import "footer";
 @import "font-awesome";
