--- a/source/css/post.styl
+++ b/source/css/post.styl
@@ -49,9 +49,9 @@
   .post-meta {
     flex: 1;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     font-size: 15px;
     color: #666;
-    align-items: flex-end;
+    align-items: center;
   }
 }
