--- a/source/css/post.styl
+++ b/source/css/post.styl
@@ -52,6 +52,6 @@
     justify-content: space-between;
     font-size: 15px;
     color: #666;
-    align-items: center;
+    align-items: flex-end;
   }
 }
