--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -2,6 +2,7 @@ backColor = #fff
 footerBackColor = #f2f2f2
 font-icon-path = "../fonts/fontawesome-webfont"
 paddingJustify = 95px
+paddingJustifyMiddle = 40px
 paddingJustifyMobile = 15px
 linkColor = #333
 textColor = #666
