--- a/source/css/comments.styl
+++ b/source/css/comments.styl
@@ -1,3 +1,8 @@
 .comments {
-  padding: 30px 95px 20px;
+  padding: 30px paddingJustify 20px;
+
+  @media (max-width: 768px) {
+    padding-left: paddingJustifyMiddle;
+    padding-right: paddingJustifyMiddle;
+  }
 }
