--- a/source/css/header.styl
+++ b/source/css/header.styl
@@ -6,6 +6,11 @@
   justify-content: space-between
   position: relative;
 
+  @media (max-width: 768px) {
+    padding-left: paddingJustifyMiddle;
+    padding-right: paddingJustifyMiddle;
+  }
+
   .blog-title .logo {
     color: linkColor;
     font-size: 24px;
