--- a/source/css/page.styl
+++ b/source/css/page.styl
@@ -3,6 +3,11 @@
   color: textColor;
   line-height: 1.8;
 
+  @media (max-width: 768px) {
+    padding-left: paddingJustifyMiddle;
+    padding-right: paddingJustifyMiddle;
+  }
+
   #more {
     display: none;
   }
