--- a/source/css/links.styl
+++ b/source/css/links.styl
@@ -34,4 +34,21 @@
     padding-left: 1em;
     color: linkColor;
   }
+
+  @media (max-width: 768px) {
+    padding: 40px paddingJustifyMiddle;
+  }
+
+  @media (max-width: 600px) {
+    li {
+      width: (100% / 2);
+    }
+  }
+
+  @media (max-width: 480px) {
+    padding: 20px paddingJustifyMobile;
+    li {
+      width: 100%;
+    }
+  }
 }
