--- a/source/css/footer.styl
+++ b/source/css/footer.styl
@@ -5,11 +5,6 @@
   background: footerBackColor;
   font-size: textSize;
 
-  @media (max-width: 768px) {
-    padding-left: paddingJustifyMiddle;
-    padding-right: paddingJustifyMiddle;
-  }
-
   a {
     color: linkColor;
     text-decoration: none;
@@ -47,6 +42,26 @@
 
       &:last-of-type {
         padding-right: 0;
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    padding: 40px paddingJustifyMiddle 0;
+    height: 150px;
+  }
+
+  @media (max-width: 480px) {
+    flex-wrap: wrap-reverse;
+    padding-top: 20px;
+
+    .contact-info {
+      justify-content: flex-start;
+
+      .contact-link {
+        &:first-of-type {
+          padding-left: 0;
+        }
       }
     }
   }
