--- a/source/css/paginator.styl
+++ b/source/css/paginator.styl
@@ -5,11 +5,6 @@
   justify-content: flex-end;
   align-items: center;
 
-  @media (max-width: 768px) {
-    padding-left: paddingJustifyMiddle;
-    padding-right: paddingJustifyMiddle;
-  }
-
   a {
     text-decoration: none;
   }
@@ -46,5 +41,27 @@
     &.next {
       padding-left: 1em;
     }
+  }
+
+  @media (max-width: 768px) {
+    padding-left: paddingJustifyMiddle;
+    padding-right: paddingJustifyMiddle;
+
+    font-size: 22px;
+
+    .paginator-item,
+    .page-number {
+      color: linkColor;
+    }
+  }
+
+  @media (max-width: 600px) {
+    font-size: 24px;
+  }
+
+  @media (max-width: 480px) {
+    font-size: 26px;
+    padding-left: paddingJustifyMobile;
+    padding-right: paddingJustifyMobile;
   }
 }
