update: add tocs

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -21,9 +21,10 @@ body {
 }
 
 @import "header";
+@import "index";
+@import "toc";
 @import "post";
 @import "paginator";
-@import "page";
 @import "comments";
 @import "links";
 @import "footer";
