--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,3 +1,15 @@
+<% if (toc(page.content).length > 1) { %>
+  <input type="checkbox" id="toggle-toc" />
+  <div class="toc-wrap">
+    <%- toc(page.content) %>
+  </div>
+  <div class="toc-toggle">
+    <label for="toggle-toc">
+      <i class="fa fa-eye"></i>
+      <i class="fa fa-eye-slash"></i>
+    </label>
+  </div>
+<% } %>
 <div id="post-content">
   <h1><%- page.title %></h1>
   <%- page.content %>
