update: add mask on toc is active

--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -9,6 +9,7 @@
       <i class="fa fa-eye-slash"></i>
     </label>
   </div>
+  <div class="mask"></div>
 <% } %>
 <div id="post-content">
   <h1><%- page.title %></h1>
