update: change mask to a label tag

--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -9,7 +9,7 @@
       <i class="fa fa-eye-slash"></i>
     </label>
   </div>
-  <div class="mask"></div>
+  <label class="mask" for="toggle-toc"></label>
 <% } %>
 <div id="post-content">
   <h1><%- page.title %></h1>
