--- a/source/css/toc.styl
+++ b/source/css/toc.styl
@@ -1,7 +1,7 @@
 .toc-wrap {
   position: fixed;
   z-index: 4;
-  background-color: #eee;
+  // background-color: #eee;
   padding: .5em;
   right: 0;
   top: 50%;
@@ -11,7 +11,7 @@
   width: 300px;
 
   a {
-    color: textColor;
+    color: #ccc;
     text-decoration: none;
     font-size: 16px;
     line-height: 1.6;
@@ -84,15 +84,20 @@
     }
 
     ~ .mask {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-
-      z-index: 2;
-
+      display: block;
+      backdrop-filter: blur(15px)
       background-color: rgba(0, 0, 0, .6);
     }
   }
+}
+
+.mask {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  transition: all .3s linear;
 }
