update: add line-numbers with code

--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -35,3 +35,9 @@
   })();
 </script>
 <% } %>
+<script>
+  window.addEventListener('load', function () {
+    [].concat(Array.from(document.querySelectorAll('code')), Array.from(document.querySelectorAll('pre'))).filter(function (item) {return item.className.indexOf('language') >= 0}).forEach(function (tag) { tag.classList.add('line-numbers') })
+    Prism.highlightAll()
+  })
+</script>
