--- a/source/css/post.styl
+++ b/source/css/post.styl
@@ -335,22 +335,12 @@
     }
   }
 
-  code,
   tt {
     margin: 0 2px;
     padding: 0px 5px;
 
     border-radius: 3px;
     background-color: rgba(0, 0, 0, .04);
-  }
-  pre>code {
-    margin: 0;
-    padding: 0;
-
-    white-space: pre;
-
-    border: none;
-    background: transparent;
   }
   pre {
     overflow: auto;
@@ -363,8 +353,7 @@
 
     border-radius: 3px;
   }
-  .gutter,
-  .code {
+  .gutter {
     display: block;
     overflow: auto;
 
@@ -377,10 +366,6 @@
     border: none;
     border-radius: 0;
   }
-  .code {
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
-  }
   .gutter {
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
@@ -391,7 +376,6 @@
 
     margin: 0;
   }
-  pre code,
   pre tt {
     margin: 0;
     padding: 0;
