--- a/source/css/toc.styl
+++ b/source/css/toc.styl
@@ -11,7 +11,7 @@
   width: 300px;
 
   a {
-    color: #ccc;
+    color: #eeeeee;
     text-decoration: none;
     font-size: 16px;
     line-height: 1.6;
@@ -74,7 +74,7 @@
 
     ~ .toc-toggle {
       transform: translate(-300px, -50%);
-      color: #ccc;
+      color: #eeeeee;
       .fa-eye {
         display: none;
       }
