--- a/source/css/footer.styl
+++ b/source/css/footer.styl
@@ -1,9 +1,14 @@
 .footer {
-  display: flex;
   height: 180px;
   padding: 60px paddingJustify 0;
   background: footerBackColor;
   font-size: textSize;
+
+  .footer-content {
+    display: flex;
+    max-width: 1440px;
+    margin: 0 auto;
+  }
 
   a {
     color: linkColor;
