--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -2,23 +2,26 @@
 <html>
 <%- partial('_partial/head') %>
 
-  <body>
-    <%- partial('_partial/header') %>
-      <main class="main">
-        <%- body %>
-      </main>
-      <%- partial('_partial/footer') %>
-        <script>
-        function footerHandler () {
-          if (window.screen.availHeight > document.body.clientHeight) {
-            document.body.classList.add('fixed')
-          } else {
-            document.body.classList.remove('fixed')
-          }
+  <body class="fixed">
+    <div class="container">
+      <%- partial('_partial/header') %>
+        <main class="main">
+          <%- body %>
+        </main>
+    </div>
+    <%- partial('_partial/footer') %>
+
+      <script>
+      function footerHandler () {
+        if (window.screen.availHeight > document.body.clientHeight) {
+          document.body.classList.add('fixed')
+        } else {
+          document.body.classList.remove('fixed')
         }
-        window.addEventListener('load', footerHandler)
-        window.addEventListener('resize', footerHandler)
-      </script>
+      }
+      window.addEventListener('load', footerHandler)
+      window.addEventListener('resize', footerHandler)
+    </script>
   </body>
 
 </html>
