--- a/source/css/toc.styl
+++ b/source/css/toc.styl
@@ -1,7 +1,6 @@
 .toc-wrap {
   position: fixed;
   z-index: 4;
-  // background-color: #eee;
   padding: .5em;
   right: 0;
   top: 50%;
@@ -11,13 +10,13 @@
   width: 300px;
 
   a {
-    color: #eeeeee;
+    color: #eee;
     text-decoration: none;
     font-size: 16px;
     line-height: 1.6;
 
     &:hover {
-      color: linkColor;
+      color: #fff;
     }
   }
 
