--- a/source/css/index.styl
+++ b/source/css/index.styl
@@ -8,9 +8,10 @@
     flex-direction: column;
     padding: 70px paddingJustify 40px;
     transition: all .3s linear;
+    text-decoration: none;
 
     &:hover {
-      left: paddingJustifyMiddle
+      background-color: footerBackColor;
     }
 
     @media (max-width: 768px) {
@@ -34,6 +35,7 @@
     font-size: 22px;
     padding-bottom: 20px;
     margin-bottom: 20px;
+    color: #333;
 
     .post-title-link {
       color: #333;
