update: add goto top supports

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -8,6 +8,9 @@
         <main class="main">
           <%- body %>
         </main>
+        <a href="#" class="goto-top">
+          <i class="fa fa-chevron-up"></i>
+        </a>
     </div>
     <%- partial('_partial/footer') %>
 
