--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -8,6 +8,7 @@
       <%- toc(page.content) %>
     </div>
   </div>
+  <label class="mask" for="toggle-toc"></label>
 <% } %>
 <div id="post-content">
   <h1><%- page.title %></h1>
