--- a/source/css/footer.styl
+++ b/source/css/footer.styl
@@ -69,6 +69,14 @@
         }
       }
     }
+
+    .footer-content {
+      flex-direction: column;
+    }
+
+    .footer-info {
+      margin-bottom: 10px;
+    }
   }
 }
 
