--- a/source/css/paginator.styl
+++ b/source/css/paginator.styl
@@ -63,5 +63,6 @@
     font-size: 26px;
     padding-left: paddingJustifyMobile;
     padding-right: paddingJustifyMobile;
+    justify-content: center;
   }
 }
