--- a/source/css/post.styl
+++ b/source/css/post.styl
@@ -406,5 +406,24 @@
 
       font-size: 17px;
     }
+
+    h1 {
+      font-size: 2em;
+    }
+    h2 {
+      font-size: 1.6em;
+    }
+    h3 {
+      font-size: 1.2em;
+    }
+    h4 {
+      font-size: 1em;
+    }
+    h5 {
+      font-size: 0.9em;
+    }
+    h6 {
+      font-size: 0.8em;
+    }
   }
 }
