--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -19,7 +19,7 @@
           <%- strip_html(post.excerpt) %>
         </div>
         <div class="post-meta">
-          <span class="disqus-comment-count" data-disqus-url="http://localhost:4000<%- url_for(post.path) %>"></span>
+          <span class="disqus-comment-count" data-disqus-identifier="<%- post.uuid %>"></span>
           <span class="post-time">
             <%- date(post.date, "YYYY-MM-DD HH:mm") %>
           </span>
