--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -25,10 +25,16 @@
   <% if (page.permalink){ %>
   var disqus_url = '<%= page.permalink %>';
   <% } %>
+  var disqus_config = function () {
+    this.page.url = location.href
+    this.page.identifier = '<%- page.uuid %>'
+    this.page.title = document.querySelector('h1').innerText
+  };
   (function(){
     var dsq = document.createElement('script');
     dsq.type = 'text/javascript';
     dsq.async = true;
+    dsq.setAttribute('data-timestamp', +new Date());
     dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
   })();
