update: add baidu-tongji code

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -45,5 +45,16 @@
         document.querySelector('.menu-item-home').classList.add('active')
     }
   </script>
+  <% if(config.baidu_tongji) { %>
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?<%- config.baidu_tongji %>";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+    <% } %>
 
 </html>
