--- a/source/css/post.styl
+++ b/source/css/post.styl
@@ -14,6 +14,9 @@
   code {
     color: #424242;
     font-weight: bold;
+    background-color: rgba(224, 224, 224, .5);
+    padding: 0 .2em;
+    margin: 0 .2em;
   }
 
   .line {
@@ -357,6 +360,13 @@
     line-height: 19px;
 
     border-radius: 3px;
+
+    code {
+      background-color: inherit;
+      padding: 0 1em;
+      padding-left: 3.8em;
+      margin: 0;
+    }
   }
   .gutter {
     display: block;
