update: change inline code colors

--- a/source/css/post.styl
+++ b/source/css/post.styl
@@ -12,7 +12,8 @@
   }
 
   code {
-    color: #424242;
+    /* #424242 */
+    color: #1976d2;
     font-weight: bold;
     background-color: rgba(224, 224, 224, .5);
     padding: 0 .2em;
