--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -2,7 +2,7 @@
 <html>
 <%- partial('_partial/head') %>
 
-  <body class="fixed">
+  <body>
     <div class="container">
       <%- partial('_partial/header') %>
         <main class="main">
