--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -34,6 +34,7 @@
       <%- paginator({
         prev_text: __('<div class="paginator-item"><i class="fa fa-angle-left"></i></div>'),
         next_text: __('<div class="paginator-item"><i class="fa fa-angle-right"></i></div>'),
+        escape: false
       }) %>
     </nav>
     <% } %>
